cleans up lecture 02 a bit more

--- a/Python/02-euler_method.ipynb
+++ b/Python/02-euler_method.ipynb
@@ -13,16 +13,20 @@
    "id": "f6cab091",
    "metadata": {},
    "source": [
-    "Suppose that we want to numerically solve a first order IVP of the form\n",
-    "\\begin{align}\n",
+    "Suppose that we want to compute a numerical solution to the first-order IVP\n",
+    "\\begin{align*}\n",
     "y'&=f(x,y),\\\\\n",
     "y(a) &=y_0\n",
-    "\\end{align}\n",
-    "over the interval $[a,b]$.  Choosing some positive integer $n$, our goal is compute a table of points $(x_i,y_i)$ so that if $y$ is the true solution, then\n",
-    "\\begin{equation}\n",
+    "\\end{align*}\n",
+    "over the interval $[a,b]$.\n",
+    "Choosing some positive integer $n$, our goal is compute a sequence of points $(x_i,y_i)$ so that if $y$ is the true solution, then\n",
+    "\\begin{equation*}\n",
     "y_i\\approx y(x_i)\n",
-    "\\end{equation}\n",
-    "for $n = 0,1,\\dots, n$.  We say that there are $n$ **steps**, or equivalently $n+1$ **mesh points** or nodes.  The distance $h_i=x_{i+1}-x_i$ is called the $i$th **step-size**, which may be variable.  For much of the course, however, we will use equally-spaced meshes with step-size $h=(b-a)/n$.\n",
+    "\\end{equation*}\n",
+    "for $i = 0,1,\\dots, n$.\n",
+    "We say that there are $n$ **steps**, or equivalently $n+1$ **mesh points** or nodes.\n",
+    "The distance $h_i=x_{i+1}-x_i$ is called the $i$th **step-size**, which may be variable.\n",
+    "For much of this course, however, we will use equally-spaced meshes with step-size $h=(b-a)/n$.\n",
     "\n",
     "Once the mesh points have been chosen, the most straightforward approach to computing the $y_i$'s is known as Euler's method.\n",
     "The basic idea of the method is simply an appeal to linearization from calculus.\n",
@@ -30,14 +34,15 @@
     "\\begin{equation}\n",
     "\\begin{split}\n",
     "y(x_{i+1})&\\approx y(x_i) + y'(x_i)(x_{i+1}-x_i)\\\\\n",
-    "&= y_i + f(x_i,y_i)h.\n",
+    "&= y_i + f(x_i,y_i)h\n",
     "\\end{split}\n",
     "\\end{equation}\n",
+    "for small $h$.\n",
     "**Euler's method** (a.k.a., the **foward Euler method**) recursively defines the $y_i$ by the formula\n",
-    "\\begin{align*}\n",
-    "y_{i+1} &= y_i + f(x_i, y_i)h \\qquad(0\\le i< n),\\\\\n",
-    "y_0&=y(a).\n",
-    "\\end{align*}"
+    "\\begin{equation*}\n",
+    "y_{i+1} = y_i + f(x_i, y_i)h\n",
+    "\\end{equation*}\n",
+    "for $0\\le i< n$."
    ]
   },
   {
@@ -53,7 +58,7 @@
    "id": "5f6cac36",
    "metadata": {},
    "source": [
-    "The `math263` module contains the following implementation of the (foward) Euler method.\n",
+    "The `math263` module contains the following Python implementation of the (foward) Euler method.\n",
     "```python\n",
     "def feuler(f, a, b, y0, n):\n",
     "        '''\n",
@@ -69,8 +74,7 @@
     "                y[i+1] = y[i] + h * f(x[i], y[i]);\n",
     "\n",
     "        return (x, y)\n",
-    "```\n",
-    "To load the module run `import math263`."
+    "```"
    ]
   },
   {
@@ -78,7 +82,7 @@
    "id": "714b5d1b",
    "metadata": {},
    "source": [
-    "## Examples."
+    "## Example."
    ]
   },
   {
@@ -86,49 +90,17 @@
    "id": "21c8dfaf",
    "metadata": {},
    "source": [
-    "We may empirically study the performance of the forward Euler method by using it to solve IVP's which we know how to solve analytically."
+    "We now show how to use Euler's method to solve the IVP\n",
+    "\\begin{align*}\n",
+    "y'&= x^2 - y,\\\\\n",
+    "y(0)&=3\n",
+    "\\end{align*}\n",
+    "over the interval $[0, 2]$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fbe1e0b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math263\n",
-    "import numpy as np\n",
-    "import sympy as sp\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tabulate import tabulate\n",
-    "from IPython.display import display, Markdown"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3bae470",
-   "metadata": {},
-   "source": [
-    "### Example 1.\n",
-    "Consider the IVP\n",
-    "\\begin{align}\n",
-    "y'&= x^2 - y,\\\\\n",
-    "y(0)&=3\n",
-    "\\end{align}\n",
-    "over the interval $[0, 2]$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e517328",
-   "metadata": {},
-   "source": [
-    "We first solve the problem symbolically."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "d1a894ba",
    "metadata": {},
    "outputs": [
@@ -156,6 +128,14 @@
     }
    ],
    "source": [
+    "# load modules\n",
+    "import math263\n",
+    "import numpy as np\n",
+    "import sympy as sp\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tabulate import tabulate\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
     "# define IVP parameters\n",
     "f = lambda x, y: x**2 - y;\n",
     "a, b = 0, 2;\n",
@@ -192,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "70203dd0",
    "metadata": {},
    "outputs": [
@@ -269,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fa104a20",
    "metadata": {},
    "outputs": [
