--- a/Python/05-nde-multistep_methods.ipynb
+++ b/Python/05-nde-multistep_methods.ipynb
@@ -115,14 +115,13 @@
     "## Example.\n",
     "\n",
     "We now conduct an empirical comparison of AB2 with Heun's modified Euler method (MEM) using the IVP\n",
-    "We now use the IVP\n",
     "\\begin{align*}\n",
     "y'&=y-x^2+1,\\\\\n",
     "y(0)&=1/2\n",
     "\\end{align*}\n",
     "as a test case.\n",
     "First we use both methods to solve the problem over the interval $[0,2]$ in $n=10$ steps.\n",
-    "We then present the global truncation errors at each step in a table."
+    "We then present the global truncation errors $e_i=|y(x_i) - y_i|$ for each method at each step in a table."
    ]
   },
   {
